{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 184,
  "lineage": "5f3d2c87-718f-0491-625f-abd7e0c36ada",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "practice_private_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/63f494a1-be1c-4550-9188-5d40a7f0bf50/resourceGroups/PracticeRG/providers/Microsoft.Network/networkInterfaces/PracticeInterface2",
            "internal_domain_name_suffix": "b3jx5q2m0gtehol5lwunr5kfib.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "PracticePrivateID",
                "primary": true,
                "private_ip_address": "10.0.3.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/63f494a1-be1c-4550-9188-5d40a7f0bf50/resourceGroups/PracticeRG/providers/Microsoft.Network/publicIPAddresses/PracticePRIP",
                "subnet_id": "/subscriptions/63f494a1-be1c-4550-9188-5d40a7f0bf50/resourceGroups/PracticeRG/providers/Microsoft.Network/virtualNetworks/PracticeVNET/subnets/PracticeSb2"
              }
            ],
            "location": "eastus",
            "mac_address": "60-45-BD-D8-A6-2F",
            "name": "PracticeInterface2",
            "private_ip_address": "10.0.3.4",
            "private_ip_addresses": [
              "10.0.3.4"
            ],
            "resource_group_name": "PracticeRG",
            "tags": {
              "environment": "norwaywest"
            },
            "virtual_machine_id": "/subscriptions/63f494a1-be1c-4550-9188-5d40a7f0bf50/resourceGroups/PracticeRG/providers/Microsoft.Compute/virtualMachines/LinuxAnsible"
          },
          "dependencies": [
            "azurerm_public_ip.practice_prip",
            "azurerm_resource_group.practice_rg",
            "azurerm_subnet.practice_subnet2",
            "azurerm_virtual_network.practice_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "practice_public_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/63f494a1-be1c-4550-9188-5d40a7f0bf50/resourceGroups/PracticeRG/providers/Microsoft.Network/networkInterfaces/PracticeInterface1",
            "internal_domain_name_suffix": "b3jx5q2m0gtehol5lwunr5kfib.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "PracticePublicIp",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/63f494a1-be1c-4550-9188-5d40a7f0bf50/resourceGroups/PracticeRG/providers/Microsoft.Network/publicIPAddresses/PracticePIP",
                "subnet_id": "/subscriptions/63f494a1-be1c-4550-9188-5d40a7f0bf50/resourceGroups/PracticeRG/providers/Microsoft.Network/virtualNetworks/PracticeVNET/subnets/PracticeSb1"
              }
            ],
            "location": "eastus",
            "mac_address": "60-45-BD-DA-BB-8C",
            "name": "PracticeInterface1",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "PracticeRG",
            "tags": {
              "environment": "norwaywest"
            },
            "virtual_machine_id": "/subscriptions/63f494a1-be1c-4550-9188-5d40a7f0bf50/resourceGroups/PracticeRG/providers/Microsoft.Compute/virtualMachines/Linux"
          },
          "dependencies": [
            "azurerm_public_ip.practice_pip",
            "azurerm_resource_group.practice_rg",
            "azurerm_subnet.practice_subnet1",
            "azurerm_virtual_network.practice_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "practice_private_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/63f494a1-be1c-4550-9188-5d40a7f0bf50/resourceGroups/PracticeRG/providers/Microsoft.Network/networkSecurityGroups/private-vm-nsg",
            "location": "eastus",
            "name": "private-vm-nsg",
            "resource_group_name": "PracticeRG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "forPrivate",
                "priority": 101,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.practice_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "practice_public_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/63f494a1-be1c-4550-9188-5d40a7f0bf50/resourceGroups/PracticeRG/providers/Microsoft.Network/networkSecurityGroups/public-vm-nsg",
            "location": "eastus",
            "name": "public-vm-nsg",
            "resource_group_name": "PracticeRG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "forPrivate",
                "priority": 101,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allow-rdp",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "forPublic",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "0.0.0.0/0",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.practice_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "practice_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/63f494a1-be1c-4550-9188-5d40a7f0bf50/resourceGroups/PracticeRG/providers/Microsoft.Network/publicIPAddresses/PracticePIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.185.244.202",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "PracticePIP",
            "resource_group_name": "PracticeRG",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "norwaywest"
            }
          },
          "dependencies": [
            "azurerm_resource_group.practice_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "practice_prip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/63f494a1-be1c-4550-9188-5d40a7f0bf50/resourceGroups/PracticeRG/providers/Microsoft.Network/publicIPAddresses/PracticePRIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.185.244.239",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "PracticePRIP",
            "resource_group_name": "PracticeRG",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "norwaywest"
            }
          },
          "dependencies": [
            "azurerm_resource_group.practice_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "practice_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/63f494a1-be1c-4550-9188-5d40a7f0bf50/resourceGroups/PracticeRG/providers/Microsoft.Network/virtualNetworks/PracticeVNET/subnets/PracticeSb1",
            "name": "PracticeSb1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "PracticeRG",
            "virtual_network_name": "PracticeVNET"
          },
          "dependencies": [
            "azurerm_resource_group.practice_rg",
            "azurerm_virtual_network.practice_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "practice_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/63f494a1-be1c-4550-9188-5d40a7f0bf50/resourceGroups/PracticeRG/providers/Microsoft.Network/virtualNetworks/PracticeVNET/subnets/PracticeSb2",
            "name": "PracticeSb2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "PracticeRG",
            "virtual_network_name": "PracticeVNET"
          },
          "dependencies": [
            "azurerm_resource_group.practice_rg",
            "azurerm_virtual_network.practice_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "securitySubnetPrivate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/63f494a1-be1c-4550-9188-5d40a7f0bf50/resourceGroups/PracticeRG/providers/Microsoft.Network/virtualNetworks/PracticeVNET/subnets/PracticeSb2",
            "network_security_group_id": "/subscriptions/63f494a1-be1c-4550-9188-5d40a7f0bf50/resourceGroups/PracticeRG/providers/Microsoft.Network/networkSecurityGroups/private-vm-nsg",
            "subnet_id": "/subscriptions/63f494a1-be1c-4550-9188-5d40a7f0bf50/resourceGroups/PracticeRG/providers/Microsoft.Network/virtualNetworks/PracticeVNET/subnets/PracticeSb2"
          },
          "dependencies": [
            "azurerm_network_security_group.practice_private_nsg",
            "azurerm_resource_group.practice_rg",
            "azurerm_subnet.practice_subnet2",
            "azurerm_virtual_network.practice_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "securitySubnetPublic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/63f494a1-be1c-4550-9188-5d40a7f0bf50/resourceGroups/PracticeRG/providers/Microsoft.Network/virtualNetworks/PracticeVNET/subnets/PracticeSb1",
            "network_security_group_id": "/subscriptions/63f494a1-be1c-4550-9188-5d40a7f0bf50/resourceGroups/PracticeRG/providers/Microsoft.Network/networkSecurityGroups/public-vm-nsg",
            "subnet_id": "/subscriptions/63f494a1-be1c-4550-9188-5d40a7f0bf50/resourceGroups/PracticeRG/providers/Microsoft.Network/virtualNetworks/PracticeVNET/subnets/PracticeSb1"
          },
          "dependencies": [
            "azurerm_network_security_group.practice_public_nsg",
            "azurerm_resource_group.practice_rg",
            "azurerm_subnet.practice_subnet1",
            "azurerm_virtual_network.practice_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "practice_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "c37f530f-d18c-43a6-b97f-5da8d8fd4541",
            "id": "/subscriptions/63f494a1-be1c-4550-9188-5d40a7f0bf50/resourceGroups/PracticeRG/providers/Microsoft.Network/virtualNetworks/PracticeVNET",
            "location": "eastus",
            "name": "PracticeVNET",
            "resource_group_name": "PracticeRG",
            "subnet": [
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/63f494a1-be1c-4550-9188-5d40a7f0bf50/resourceGroups/PracticeRG/providers/Microsoft.Network/virtualNetworks/PracticeVNET/subnets/PracticeSb1",
                "name": "PracticeSb1",
                "security_group": "/subscriptions/63f494a1-be1c-4550-9188-5d40a7f0bf50/resourceGroups/PracticeRG/providers/Microsoft.Network/networkSecurityGroups/public-vm-nsg"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/63f494a1-be1c-4550-9188-5d40a7f0bf50/resourceGroups/PracticeRG/providers/Microsoft.Network/virtualNetworks/PracticeVNET/subnets/PracticeSb2",
                "name": "PracticeSb2",
                "security_group": "/subscriptions/63f494a1-be1c-4550-9188-5d40a7f0bf50/resourceGroups/PracticeRG/providers/Microsoft.Network/networkSecurityGroups/private-vm-nsg"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.practice_rg"
          ]
        }
      ]
    }
  ]
}